[package]
name = "logflux"
version = "0.1.0"
edition = "2024"
authors = ["Subham<subhams2804@gmail.com>"]

[dependencies]
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }

